# file-json

./: README.md  pyproject.toml
src/file_json/: __about__.py  __init__.py  ascii_dict.py  base.py  hex_dict.py  time_base_list.py  utils.py
tests/: __init__.py  base.py  test_dict.py  test_time_base_list.py
